--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Laser.js</title>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Laser.js with RequireJS | Example</title>
+    <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <script data-main="js/src/init" src="js/vendor/require.js"></script>
   </head>
   <body>
+    <div id="container">
+      <div class="info">
+        <div class="status">
+          <p class="current"></p>
+        </div>
+      </div>
+      <div class="canvas">
+        <div class="box"></div>
+      </div>
+    </div>
   </body>
 </html>
